--- a/geekmagic-clock.yaml
+++ b/geekmagic-clock.yaml
@@ -124,14 +124,15 @@ display:
           int ty = y_start;
 
           // Left: Actual temperature, thermometer icon
-          int left_icon_x = 28;   // left margin for icon
+          int left_icon_x = 26;   // left margin for icon
           it.filled_circle(left_icon_x, ty + 6, 4, Color::WHITE);   // bulb
           it.line(left_icon_x, ty - 6, left_icon_x, ty + 4, Color::WHITE); // tube
-          it.rectangle(left_icon_x - 2, ty - 10, 4, 6, Color::WHITE);
+          it.rectangle(left_icon_x - 2, ty - 10, 4, 12, Color::WHITE);
+          // Font sizes available: tiny, small, medium, large, giant
           it.printf(left_icon_x + 14, ty, id(medium_font), Color::WHITE, TextAlign::CENTER_LEFT, "%.1f°", id(outdoor_temperature).state);
 
           // Right: Feels like, sun with rays (icon centered with number)
-          int right_icon_x = 190;                      // right margin for icon
+          int right_icon_x = 142;                      // right margin for icon
           int sun_cx = right_icon_x - 4;              // icon centered with value
           it.circle(sun_cx, ty + 1, 4, Color::WHITE);  // align icon vertically with text
           for (int i = 0; i < 8; i++) {
@@ -142,7 +143,7 @@ display:
             int y2 = ty + (int)(8 * sin(a));
             it.line(x1, y1, x2, y2, Color::WHITE);
           }
-          it.printf(right_icon_x - 14, ty, id(medium_font), Color::WHITE, TextAlign::CENTER_RIGHT, "%.1f°", id(feels_like_temperature).state);
+          it.printf(right_icon_x + 14, ty, id(medium_font), Color::WHITE, TextAlign::CENTER_LEFT, "%.1f°", id(feels_like_temperature).state);
         }
 
         // Wind
@@ -150,7 +151,7 @@ display:
           // Display wind speed and gust with icons (no separator)
           int wy = y_start + line_height;
           // speed icon: streamlines
-          int speed_icon_x = 24;
+          int speed_icon_x = 20;
           it.line(speed_icon_x,     wy - 5, speed_icon_x + 10, wy - 5, Color::WHITE);
           it.line(speed_icon_x + 2, wy,     speed_icon_x + 12, wy,     Color::WHITE);
           it.line(speed_icon_x,     wy + 5, speed_icon_x + 10, wy + 5, Color::WHITE);
@@ -176,7 +177,7 @@ display:
           float flow_deg = fmodf(dir_from_deg + 180.0f, 360.0f);  // flip 180° to get flow direction
           float ang = (flow_deg - 90.0f) * M_PI / 180.0f;         // screen coordinates adjustment
 
-          int center_x = 210;     // minor nudge
+          int center_x = 200;     // minor nudge
           int center_y = y_start + line_height;
           // Draw surrounding circle like a compass
           int compass_r = 13;     // slightly larger
@@ -206,16 +207,16 @@ display:
           int bar_y = y_start + 2 * line_height - (bar_height/2);
           float percentage = id(humidity).state / 100.0;
           // icon
-          int icon_cx = 34;
+          int icon_cx = 28;
           int icon_cy = bar_y + bar_height/2;
           it.filled_circle(icon_cx, icon_cy + 2, 6, Color::WHITE);
           it.filled_triangle(icon_cx, icon_cy - 8, icon_cx - 5, icon_cy + 1, icon_cx + 5, icon_cy + 1, Color::WHITE);
           // percent value at far right
-          int pct_x = 225; // right margin anchor
+          int pct_x = 222; // right margin anchor
           it.printf(pct_x, y_start + 2 * line_height, id(medium_font), Color::WHITE, TextAlign::CENTER_RIGHT, "%.0f%%", id(humidity).state);
           // bar spans from left of center to just before percent
-          int bar_x = 50;
-          int bar_right = 165;
+          int bar_x = 48;
+          int bar_right = 160;
           int bar_width = bar_right - bar_x;
           it.rectangle(bar_x, bar_y, bar_width, bar_height, Color::WHITE);
           it.filled_rectangle(bar_x, bar_y, (int)(bar_width * percentage), bar_height, Color::WHITE);
